<resources>
    <string name="app_name">ToneMe</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_rec_audio">Audio recognition</string>
    <string name="subtitle_activity_rec_audio">Click the note you heard !</string>
    <string name="title_activity_rec_note">Note recognition</string>
    <string name="subtitle_activity_rec_note">Click the note you read on the stave !</string>
    <string name="title_activity_rec_chord">Chord recognition</string>
    <string name="subtitle_activity_rec_chord">Give the chord name you read on the stave !</string>
    <string name="title_activity_chord_theory">Chord theory</string>
    <string name="subtitle_activity_chord_theory">Push on the keyboard all the notes of the given chord !</string>
    <string name="note_c">C</string>
    <string name="note_d">D</string>
    <string name="note_e">E</string>
    <string name="note_f">F</string>
    <string name="note_g">G</string>
    <string name="note_a">A</string>
    <string name="note_b">B</string>
    <string name="exercice_fail">Fail</string>
    <string name="exercice_skip">Skip</string>
    <string name="pref_title_display">Display</string>
    <string name="pref_title_musical">Réglages musicaux</string>
    <string name="pref_title_exercices">Exercices</string>
    <string name="pref_title_music_keys">Clefs</string>
    <string name="pref_title_tones">Pitch</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_english">English</string>
    <string name="pref_language_french">French</string>
    <string name="pref_notes_keyboard_sum">Show notes on keyboard</string>
    <string name="pref_notes_keyboard">Note labels</string>
    <string name="pref_music_key_sol">Treble</string>
    <string name="pref_music_key_fa">Bass</string>
    <string name="pref_num_questions_sum">Number of questions in a test</string>
    <string name="pref_num_questions">Number of questions</string>
    <string name="pref_skip_sum">Go to next question without extra try</string>
    <string name="pref_skip">Skip if wrong</string>
    <string name="pref_timer_sum">Limit time per question</string>
    <string name="pref_timer">Set timer</string>
    <string name="pref_timer_length_sum">Maximum allowed time (sec)</string>
    <string name="pref_timer_length">Answer time</string>
    <string name="pref_tones_low">Low</string>
    <string name="pref_tones_medium">Medium</string>
    <string name="pref_tones_high">High</string>
    <string name="score_best">Best score : </string>
    <string name="score_your">Your score : </string>
    <string name="test_new">New test</string>
    <string name="test_finished">Congrats, you finished the test !</string>
    <string name="menu">Back to menu</string>
    <string name="chord_major">Major</string>
    <string name="chord_minor">Minor</string>
</resources>
