<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exo_end"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_finished"
        android:textColor="@color/textColorAccent"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_your"
        android:textColor="#000"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/new_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_new"
        android:textColor="@color/textColorAccent"
        android:background="@drawable/button"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textColor="@color/textColorAccent"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"/>

</LinearLayout>